testing/aspnetapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapp
spec:

  replicas: 3

  selector:
    matchLabels:
      app: aspnetapp
  template:
    metadata:
      labels:
        app: aspnetapp
    spec:
      containers:
      - name: aspnetapp
        image: "mcr.microsoft.com/dotnet/samples:aspnetapp"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
