testing/aspnetapp/base/ingress.yaml
# https://github.com/Azure/application-gateway-kubernetes-ingress/blob/master/docs/annotations.md

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging-http-issuer" 
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    #kubernetes.io/ingress.class: azure/application-gateway

spec:
  ingressClassName: azure-application-gateway

  tls:
  - hosts:
    - microtodo-dev-0.westeurope.cloudapp.azure.com
    secretName: microtodo-ssl

  rules:
  - host: microtodo-dev-0.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
        pathType: Exact
